# atenea

./: CMakeLists.txt  README.md
doc/: INSTALL.md
src/: atenea.cpp  atenea.cpp~
src/shared/: CMakeLists.txt.inc  CMakeLists.txt.inc~  CMakeLists.txt.proto
